# arxiv-slack-notification

./: README.md  config.template.json  get_arxiv.py  pyproject.toml
docker/: cron.conf
